// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminEmails saga load actions Should call load.failure if API returns error 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "type": "app/admin-emails/LOAD/REQUEST",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;

exports[`AdminEmails saga load actions Should call load.failure if an exception occurs 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "type": "app/admin-emails/LOAD/REQUEST",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;

exports[`AdminEmails saga load actions Should call load.success on successful API call 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "type": "app/admin-emails/LOAD/REQUEST",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;

exports[`AdminEmails saga resend actions Should call load.trigger on successful API call 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`AdminEmails saga resend actions Should call resend.failure if API returns error 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`AdminEmails saga resend actions Should call resend.failure if an exception occurs 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`AdminEmails saga resend actions Should call resend.success on successful API call 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;
